--- a/index.css
+++ b/index.css
@@ -13,13 +13,40 @@ body {
 }
 
 .header {
-    background-color: #4A90E2;
-    color: white;
+    color: whitesmoke;
     width: 100%;
     padding: 15px;
     text-align: center;
-    font-size: 24px;
+    font-size: 48px;
     font-weight: bold;
+}
+
+nav {
+    padding: 10px;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
+    text-decoration-color: white;
+  
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
 }
 
 .current-weather-stats {
@@ -41,10 +68,23 @@ body {
     margin: 5px 0;
     font-size: 18px;
 }
-
 .forecast {
     margin-top: 30px;
     width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.forecast-row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.forecast-row.bottom {
+    justify-content: center;
+    align-items: center;
 }
 
 .forecast-card {
@@ -53,10 +93,22 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 15px;
-    display: flex;
-    justify-content: space-between;
+    margin-right: 45px;
+    display: flex; 
+    justify-content: space-evenly;
     align-items: center;
+    width: 22%;
+    height: 150px; 
 }
+
+.forecast-card:last-child {
+    margin-right: 0;
+}
+
+.forecast-row.bottom {
+    justify-content: center;
+}
+
 
 .forecast-card p {
     margin: 0;
@@ -66,4 +118,51 @@ body {
 .forecast-card img {
     width: 50px;
     height: 50px;
+}
+
+.forecast-date {
+    margin-bottom: 10px;
+}
+
+.forecast-card p {
+    margin: 5px 0;
+    color: #333;
+    font-size: 14px;
+    width: 100%;
+}
+
+.forecast-card p:first-of-type {
+    font-weight: bold;
+    font-size: 16px;
+    color: #1a1a1a;
+    margin-bottom: 10px;
+}
+
+
+.forecast-card .temp {
+    font-size: 24px;
+    font-weight: bold;
+    color: #1a1a1a;
+    margin-top: auto;
+}
+
+.temp-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 10px;
+}
+
+.temp-high, .temp-low {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.temp-high {
+    color: #FF6B6B;
+}
+
+.temp-low {
+    color: #4A90E2;
 }
