underline. need to change background colors of the cards, and make the data match each page.

--- a/index.css
+++ b/index.css
@@ -76,6 +76,10 @@ nav ul li a {
     justify-content: space-between;
 }
 
+.forecast .more {
+    text-decoration: underline;
+}
+
 .forecast-row {
     display: flex;
     justify-content: space-between;
